--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100&display=swap');
 
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 body{
     font-family: 'Roboto', sans-serif;
-    width: 100%;
     background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A605, #23D5AB);
     background-size: 400% 400%;
     animation: change 10s ease-in-out infinite;
+    
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
 }
 
 #title{
